--- a/src/app/planner/summary/summary.component.scss
+++ b/src/app/planner/summary/summary.component.scss
@@ -102,8 +102,31 @@ table {
   > *:not(:first-child) {
     margin-left: 0.25rem;
   }
+
+  $bevel-padding: 3px;
+  .type-label {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 2.5rem;
+    border-radius: 0.25rem;
+    box-shadow: var(--mat-sys-level1);
+    height: 1rem;
+    padding: $bevel-padding;
+
+    .type-text {
+      color: white;
+      flex-shrink: 0;
+      font-size: 0.6em;
+      line-height: 1em;
+    }
+  }
 }
 
 .footer-label-cell {
+  font-weight: 600;
+}
+
+.pokemon-label {
   font-weight: 600;
 }
