--- a/src/app/planner/settings/settings.component.html
+++ b/src/app/planner/settings/settings.component.html
@@ -1,22 +1,12 @@
 @if (draftFormGroup) {
   <div class="p-4 flex flex-col justify-between items-center">
     <div class="settings-container">
-      <mat-form-field>
-        <mat-label>Format</mat-label>
-        <mat-select [formControl]="draftFormGroup.controls.format">
-          @for (format of formats; track $index) {
-            <mat-option [value]="format">{{ format }}</mat-option>
-          }
-        </mat-select>
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>Ruleset</mat-label>
-        <mat-select [formControl]="draftFormGroup.controls.ruleset">
-          @for (ruleset of rulesets; track $index) {
-            <mat-option [value]="ruleset">{{ ruleset }}</mat-option>
-          }
-        </mat-select>
-      </mat-form-field>
+      <format-select
+        [formControl]="draftFormGroup.controls.format"
+      ></format-select>
+      <ruleset-select
+        [formControl]="draftFormGroup.controls.ruleset"
+      ></ruleset-select>
     </div>
     <div class="settings-container">
       <mat-form-field>
