--- a/src/app/util/ruleset-select/ruleset.component.scss
+++ b/src/app/util/ruleset-select/ruleset.component.scss
@@ -1,6 +1,6 @@
 $height: 32px;
-
 .mat-mdc-option {
-  height: $height !important;
-  min-height: $height !important;
+  height: fit-content !important;
+  padding: 0.25rem 0.125rem;
+  min-height: 0 !important;
 }
