convert png screenshots to webp

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -39,7 +39,7 @@
       </ul>
     </div>
     <img
-      src="../../../assets/screenshots/about/draftoverview.png"
+      src="../../../assets/screenshots/about/draftoverview.webp"
       class="justify-self-center order-2 object-cover max-w-full border rounded-lg shadow max-h-80 border-menu-400"
     />
     <div class="order-3 md:order-4">
@@ -70,7 +70,7 @@
       </ul>
     </div>
     <img
-      src="../../../assets/screenshots/about/oppoverview.png"
+      src="../../../assets/screenshots/about/oppoverview.webp"
       class="justify-self-center order-4 object-cover max-w-full border rounded-lg shadow max-h-80 border-menu-400 md:order-3"
     />
     <div class="order-5">
@@ -124,11 +124,11 @@
     </div>
     <div class="flex flex-col items-center order-6 space-y-2">
       <img
-        src="../../../assets/screenshots/about/matchup1.png"
+        src="../../../assets/screenshots/about/matchup1.webp"
         class="object-cover max-w-full border rounded-lg shadow max-h-80 border-menu-400"
       />
       <img
-        src="../../../assets/screenshots/about/matchup2.png"
+        src="../../../assets/screenshots/about/matchup2.webp"
         class="object-cover max-w-full border rounded-lg shadow max-h-80 border-menu-400"
       />
     </div>
@@ -157,7 +157,7 @@
       </ul>
     </div>
     <img
-      src="../../../assets/screenshots/about/planner.png"
+      src="../../../assets/screenshots/about/planner.webp"
       class="justify-self-center order-8 object-cover max-w-full border rounded-lg shadow max-h-80 border-menu-400 md:order-7"
     />
   </div>
