--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -47,11 +47,11 @@
           >
             <div class="w-full md:w-1/2">
               <strong>Old</strong>
-              <img src="../../../assets/screenshots/about/planner.png" />
+              <img src="../../../assets/screenshots/about/planner.webp" />
             </div>
             <div class="w-full md:w-1/2">
               <strong>New</strong>
-              <img src="../../../assets/screenshots/about/planner2.png" />
+              <img src="../../../assets/screenshots/about/planner2.webp" />
             </div>
           </div>
         </div>
