--- a/src/app/drafts/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
+++ b/src/app/drafts/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
@@ -1,78 +1,68 @@
-<form
-  [formGroup]="draftForm"
-  (ngSubmit)="onSubmit()"
-  (keydown.enter)="$event.preventDefault()"
-  class="p-2 m-2 space-y-3 shadow-md team bg-aTeam-300 shadow-aTeam-600 rounded-xl"
->
-  <div class="w-full p-2 lg:space-x-2 lg:flex">
-    <div
-      class="grid flex-shrink-0 w-full grid-cols-1 lg:w-112 sm:grid-cols-2 gap-x-2 lg:grid-cols-1 h-fit"
-    >
-      <div>
-        <label class="block mb-1 font-bold">League Name</label>
-        <input
-          formControlName="leagueName"
-          spellcheck="false"
-          placeholder="Pokemon Draft League"
-          class="w-full px-4 py-2 shadow-md text-symbolColor-main rounded-xl bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
-        />
-      </div>
-      <div>
-        <label class="block mb-1 font-bold">Team Name</label>
-        <input
-          formControlName="teamName"
-          spellcheck="false"
-          placeholder="Deimos Deoxys"
-          class="w-full px-4 py-2 shadow-md text-symbolColor-main rounded-xl bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
-        />
-      </div>
-      <div>
-        <label class="block mb-1 font-bold">Format</label>
-        <div
-          class="w-full px-2 shadow-md text-symbolColor-main rounded-xl bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
-        >
-          <select-no-search
-            [items]="formats"
-            [placeholder]="'Select Format'"
-            formControlName="format"
-          ></select-no-search>
-        </div>
-      </div>
-      <div>
-        <label class="block mb-1 font-bold">Ruleset</label>
-        <div
-          class="w-full px-2 shadow-md text-symbolColor-main rounded-xl bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
-        >
-          <select-no-search
-            [items]="rulesets"
-            [placeholder]="'Select Ruleset'"
-            formControlName="ruleset"
-          ></select-no-search>
-        </div>
-      </div>
-    </div>
+<mat-stepper #stepper class="pokemon-form-container" orientation="vertical">
+  <mat-step
+    state="details"
+    [stepControl]="draftForm.controls.details"
+    errorMessage="Name is required."
+  >
+    <form [formGroup]="draftForm.controls.details">
+      <ng-template matStepLabel>Details</ng-template>
+      <ng-template matStepContent>
+        <div class="details-form-container">
+          <div class="league-container details-container">
+            <mat-form-field>
+              <mat-label>League Name</mat-label>
+              <input matInput formControlName="leagueName" spellcheck="false" />
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Team Name</mat-label>
+              <input matInput formControlName="teamName" spellcheck="false" />
+            </mat-form-field>
+            <format-select formControlName="format"></format-select>
+            <ruleset-select formControlName="ruleset"></ruleset-select>
+            <mat-form-field class="md:col-span-2">
+              <mat-label>Document Link</mat-label>
+              <input
+                matInput
+                formControlName="doc"
+                #docInput
+                spellcheck="false"
+              />
 
-    <div class="flex-grow min-h-full space-y-1">
-      <label class="font-bold" for="team">Team</label>
-      <div id="team" class="shadow-md rounded-xl">
-        <team-form
-          formControlName="team"
-          [maxCols]="2"
-          color="aTeam"
-        ></team-form>
+              <button
+                type="button"
+                mat-icon-button
+                matSuffix
+                [disabled]="!docInput.value"
+                (click)="openLink(docInput.value)"
+              >
+                <mat-icon>open_in_new</mat-icon>
+              </button>
+            </mat-form-field>
+          </div>
+        </div>
+        <div class="button-bar">
+          <button mat-flat-button matStepperNext>Next</button>
+        </div>
+      </ng-template>
+    </form>
+  </mat-step>
+  <mat-step state="team">
+    <ng-template matStepLabel>Team</ng-template>
+    <ng-template matStepContent>
+      <div class="team-container">
+        <new-team-form id="team" color="aTeam"></new-team-form>
       </div>
-    </div>
-  </div>
+      <div class="button-bar">
+        <button mat-flat-button matStepperPrevious>Back</button>
+        <button mat-flat-button>Submit</button>
+      </div>
+    </ng-template>
+  </mat-step>
 
-  @if (!importing) {
-    <div class="flex justify-end w-full">
-      <button
-        type="submit"
-        class="w-24 p-1 mx-4 text-xl font-bold shadow rounded-xl bg-menu-200 hover:bg-menu-100 shadow-menu-600"
-      >
-        Submit
-      </button>
-    </div>
-  }
-</form>
-<!-- {{ draftForm.value | json }} -->
+  <ng-template matStepperIcon="details">
+    <mat-icon>info</mat-icon>
+  </ng-template>
+  <ng-template matStepperIcon="team">
+    <mat-icon>workspaces</mat-icon>
+  </ng-template>
+</mat-stepper>
